--- a/synthesizable/makefile
+++ b/synthesizable/makefile
@@ -3,6 +3,7 @@ AP=/opt/Xilinx/Vivado_HLS/2015.4/include
 INC=$(AC) $(AP) ./include
 LINC=./include
 INC_PARAMS=$(foreach d, $(INC), -I$d)
+CXXFLAGS=-std=c++11 
 VARS_CAT=-D__DEBUG__=1 -D__CATAPULT__=1
 VARS_VIV=-D__DEBUG__=1 -D__VIVADO__=1
 FILES=core.cpp elfFile.cpp reformeddm_sim.cpp syscall.cpp
@@ -12,7 +13,7 @@ HEADER=cache.h core.h debug.h elf.h elfFile.h portability.h riscvISA.h syscall.h
 I_HEADER=$(foreach f, $(HEADER), $(INC)/$f)
 
 catapult.sim: $(S_FILES) $(I_HEADER)
-	g++ -o catapult.sim $(INC_PARAMS) $(S_FILES) $(VARS_CAT)
+	g++ $(CXXFLAGS) -o catapult.sim $(INC_PARAMS) $(S_FILES) $(VARS_CAT)
 
 vivado.sim: $(S_FILES) $(I_HEADER) 
 	g++ -o vivado.sim $(INC_PARAMS) $(S_FILES) $(VARS_VIV)
