--- a/simplecore/makefile
+++ b/simplecore/makefile
@@ -5,12 +5,13 @@ FILES=simplecore.cpp simplecore_tb.cpp
 S_FILES=$(foreach f, $(FILES), $f)
 HEADER=simplecore.h
 I_HEADER=$(foreach f, $(HEADER), $f)
+CFLAGS=-Wall -Wno-unknown-pragmas -Wno-unused-label
 
 testbench: $(S_FILES) $(I_HEADER)
-	g++ -o testbench.sim -Wall $(INC_PARAMS) $(S_FILES) $(VARS_CAT)
+	g++ -o testbench.sim $(CFLAGS) $(INC_PARAMS) $(S_FILES) $(VARS_CAT)
 
 debug: $(S_FILES) $(I_HEADER)
-	g++ -g -O0 -o testbench.sim -Wall $(INC_PARAMS) $(S_FILES) $(VARS_CAT)
+	g++ -g -O0 -o testbench.sim $(CFLAGS) $(INC_PARAMS) $(S_FILES) $(VARS_CAT)
 
 clean:
 	rm -rf *.o testbench
