--- a/synthesizable/benchmarks/makefile
+++ b/synthesizable/benchmarks/makefile
@@ -4,26 +4,25 @@ dependancies = src/matmul.c include/matmul.h src/qsort.c include/qsort.h
 CCX = riscv32-unknown-elf-gcc
 INCLUDE = ./include
 OUT_DIR = ./build
-all: directories $(executables)
-$(OUT_DIR)/matmul4_4.out : $(dependancies)
-	$(CCX) -I $(INCLUDE) src/matmul.c -o $(OUT_DIR)/matmul4_4.out -D SIZE=4
-$(OUT_DIR)/matmul8_8.out : $(dependancies)
-	$(CCX) -I $(INCLUDE) src/matmul.c -o $(OUT_DIR)/matmul8_8.out -D SIZE=8
-$(OUT_DIR)/matmul16_16.out : $(dependancies)
-	$(CCX) -I $(INCLUDE) src/matmul.c -o $(OUT_DIR)/matmul16_16.out -D SIZE=16
-$(OUT_DIR)/matmul32_32.out : $(dependancies)
-	$(CCX) -I $(INCLUDE) src/matmul.c -o $(OUT_DIR)/matmul32_32.out -D SIZE=32
-$(OUT_DIR)/qsort_10.out : src/qsort.c include/qsort.h
-	$(CCX) -I $(INCLUDE) src/qsort.c -o $(OUT_DIR)/qsort_10.out -D SIZE=10
-$(OUT_DIR)/qsort_50.out : src/qsort.c include/qsort.h
-	$(CCX) -I $(INCLUDE) src/qsort.c -o $(OUT_DIR)/qsort_50.out -D SIZE=50
-$(OUT_DIR)/qsort_100.out : src/qsort.c include/qsort.h
-	$(CCX) -I $(INCLUDE) src/qsort.c -o $(OUT_DIR)/qsort_100.out -D SIZE=100
-$(OUT_DIR)/qsort_1000.out : src/qsort.c include/qsort.h
-	$(CCX) -I $(INCLUDE) src/qsort.c -o $(OUT_DIR)/qsort_1000.out -D SIZE=1000
-directories: ${OUT_DIR}
-${OUT_DIR}:
-	mkdir -p ${OUT_DIR}
+TYPES = schar uchar short ushort int uint int64 uint64 
+
+benchmarks = matmul qsort
+msize = 4 8 16 32
+qsize = 10 50 100 1000
+
+all: $(dependancies)
+	$(foreach size, $(msize), $(foreach type, $(TYPES), $(CCX) -I $(INCLUDE) src/matmul.c -Wno-overflow -o $(OUT_DIR)/matmul_$(type)_$(size).riscv -DSIZE=$(size) -DTYPE=$(type);))
+	$(foreach size, $(qsize), $(foreach type, $(TYPES), $(CCX) -I $(INCLUDE) src/qsort.c -Wno-overflow -o $(OUT_DIR)/qsort_$(type)_$(size).riscv -DSIZE=$(size) -DTYPE=$(type);))
+	$(foreach size, $(msize), $(foreach type, $(TYPES), g++ -I $(INCLUDE) src/matmul.c -Wno-overflow -o build/matmul_$(type)_$(size) -DSIZE=$(size) -DTYPE=$(type);))
+	$(foreach size, $(qsize), $(foreach type, $(TYPES), g++ -I $(INCLUDE) src/qsort.c -Wno-overflow -o build/qsort_$(type)_$(size) -DSIZE=$(size) -DTYPE=$(type);))
+	$(foreach size, $(msize), $(foreach type, $(TYPES), build/matmul_$(type)_$(size) > res/matmul_$(type)_$(size);))
+	$(foreach size, $(qsize), $(foreach type, $(TYPES), build/qsort_$(type)_$(size) > res/qsort_$(type)_$(size);))
+	$(foreach size, $(msize), $(foreach type, $(TYPES), riscv32-unknown-elf-objdump -D build/matmul_$(type)_$(size).riscv > build/matmul_$(type)_$(size).txt;))
+	$(foreach size, $(qsize), $(foreach type, $(TYPES), riscv32-unknown-elf-objdump -D build/qsort_$(type)_$(size).riscv > build/qsort_$(type)_$(size).txt;))
+	 
+
 clean:
-	rm $(executables)
-.PHONY: all clean directories
+	$(foreach benchmark, $(benchmarks), rm build/$(benchmark)*;)
+	$(foreach benchmark, $(benchmarks), rm res/$(benchmark)*;)
+
+.PHONY: all clean directories test
